--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,5 @@
 ---
-
+const mainContent = 'main-content';
 ---
 
 <html lang="en">
@@ -11,6 +11,8 @@
 		<title>Astro</title>
 	</head>
 	<body>
-		<h1>Astro</h1>
+		<header>
+			
+		</header>
 	</body>
 </html>
