--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,16 +9,16 @@ const mainContent = 'main-content';
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
-		<title>Astro</title>
+		<title>Nicholas Boyce-Software Engineer</title>
 	</head>
 	<body>
 		<header>
 			<SkipLink mainContent={mainContent} />
 			<nav>
 				<ul>
-					<li>Projects</li>
-					<li>Blog</li>
-					<li>About</li>
+					<li><a href="#projects">Projects</a></li>
+					<li><a href="/blog/">Blog</a></li>
+					<li><a href="#about">About</a></li>
 				</ul>
 			</nav>
 		</header>
