Added description for Let's Build It.

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -41,7 +41,68 @@ const pageTitle = 'Nicholas Boyce-Software Engineer';
 			</section>
 			<section id="projects" aria-labelledby="projects-heading">
 				<h1 id="projects-heading">Projects I've Done</h1>
-				<p class="section-body"></p>
+				<ul class="section-body">
+					<li class="project">
+						<article>
+							<h2>Let's Build It! [WIP]</h2>
+							<p class="project-description">
+								As a software engineer who has largely learned about web development on his own, I often wished that I could more easily find people to work with.
+								I wanted to nurture my growth mindset, but what on Earth was I supposed to build? I knew I wanted to build, but I needed direction. And learning about the possibilities on my own seemed like a gargantuan task.
+								Luckily for me, I was able to find the Recurse Center, full of wonderful people with equally amazing ideas. But what about those weren't so lucky?
+								<br/>
+								Enter: Let's Build It. My goal is for this project to connect developers who need a team, or even just some inspiration. The main feature I'm working on now is an accessible search feature.
+								I've already implemented authentication and defined the user schemas. 
+							</p>
+							<ul class="tags" aria-label="Technology used">
+								<li class="tag">React.js</li>
+								<li class="tag">TypeScript</li>
+								<li class="tag">Node.js</li>
+								<li class="tag">Express</li>
+								<li class="tag">PostgreSQL</li>
+								<li class="tag">Kysely</li>
+							</ul>
+						</article>
+					</li>
+					<li class="project">
+						<article>
+							<h2>LinkCards</h2>
+							<p class="project-description"></p>
+							<ul class="tags" aria-label="Technology used">
+								<li class="tag">React.js</li>
+								<li class="tag">Node.js</li>
+								<li class="tag">Express</li>
+								<li class="tag">Mongoose</li>
+								<li class="tag">MongoDB</li>
+							</ul>
+						</article>
+					</li>
+					<li class="project">
+						<article>
+							<h2>Shufflify</h2>
+							<p class="project-description"></p>
+							<ul class="tags" aria-label="Technology used">
+								<li class="tag">HTML</li>
+								<li class="tag">CSS</li>
+								<li class="tag">JavaScript</li>
+								<li class="tag">Spotify API</li>
+							</ul>
+						</article>
+					</li>
+					<li class="project">
+						<article>
+							<h2>Grenada Land Registry</h2>
+							<p class="project-description"></p>
+							<ul class="tags" aria-label="Technology used">
+								<li class="tag">HTML</li>
+								<li class="tag">CSS</li>
+								<li class="tag">JavaScript</li>
+								<li class="tag">Java</li>
+								<li class="tag">Spring Boot</li>
+								<li class="tag">H2 SQL</li>
+							</ul>
+						</article>
+					</li>
+				</ul>
 			</section>
 			<section id="about" aria-labelledby="about-heading">
 				<h1 id="about-heading">My Story</h1>
