Added description for LinkCards.

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -66,7 +66,13 @@ const pageTitle = 'Nicholas Boyce-Software Engineer';
 					<li class="project">
 						<article>
 							<h2>LinkCards</h2>
-							<p class="project-description"></p>
+							<p class="project-description">
+								The thing about learning full stack development on your own is that you're often in charge of a lot of aspects that you'd otherwise not see as a software engineer.
+								This includes creating pleasing designs. Once I realized I really wanted to hone in on the actual implementation, I practiced a lot on <a href="https://www.frontendmentor.io/profile/nicholasboyce">Frontend Mentor</a> to simulate 
+								what it would feel like to implement design files from the UI/UX team!
+								<br />
+								This project's design was inspired by one of the exercises there, and I extended it to create a functioning full stack application with user accounts and individual user pages.
+							</p>
 							<ul class="tags" aria-label="Technology used">
 								<li class="tag">React.js</li>
 								<li class="tag">Node.js</li>
