Added description for Shufflify.

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -85,7 +85,12 @@ const pageTitle = 'Nicholas Boyce-Software Engineer';
 					<li class="project">
 						<article>
 							<h2>Shufflify</h2>
-							<p class="project-description"></p>
+							<p class="project-description">
+								Shufflify was my attempt at understanding JavaScript and DOM manipulation on a deeper level. I hadn't started learning React fully yet, and I wanted to make sure I really understood what it was doing for me
+								before simply using it for the sake of having it as a tool. I really learned a lot about how SPAs manage state (and how easy frameworks like React make it!), and I learned a good bit about the OAuth process
+								and interacting with APIs as well. Shufflify was recently approved by the Spotify Developer Team themselves, so please feel free to try it out! As the homepage says,
+								just pick your playlists, shuffle them into a brand new one, and enjoy!
+							</p>
 							<ul class="tags" aria-label="Technology used">
 								<li class="tag">HTML</li>
 								<li class="tag">CSS</li>
