Added description for Grenada Land Registry.

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -68,7 +68,7 @@ const pageTitle = 'Nicholas Boyce-Software Engineer';
 							<h2>LinkCards</h2>
 							<p class="project-description">
 								The thing about learning full stack development on your own is that you're often in charge of a lot of aspects that you'd otherwise not see as a software engineer.
-								This includes creating pleasing designs. Once I realized I really wanted to hone in on the actual implementation, I practiced a lot on <a href="https://www.frontendmentor.io/profile/nicholasboyce">Frontend Mentor</a> to simulate 
+								This includes creating pleasing designs. Once I realized I really wanted to hone in on the actual implementation, I practiced a lot on <a href="https://www.frontendmentor.io/profile/nicholasboyce" target="_blank">Frontend Mentor</a> to simulate 
 								what it would feel like to implement design files from the UI/UX team!
 								<br />
 								This project's design was inspired by one of the exercises there, and I extended it to create a functioning full stack application with user accounts and individual user pages.
@@ -102,7 +102,12 @@ const pageTitle = 'Nicholas Boyce-Software Engineer';
 					<li class="project">
 						<article>
 							<h2>Grenada Land Registry</h2>
-							<p class="project-description"></p>
+							<p class="project-description">
+								As my first "serious" attempt at making something on my own, I'm very fond of this website. After losing a close family member and deciding to face my fears and become a software engineer,
+								I wanted to try and make something meaningful. What was on my mind was my parents' home country (as well as that of my late relative) Grenada. As beautiful as the island is, the design for their <a href="https://web.archive.org/web/20240302042518/https://elandregistry.gov.gd/" target="_blank">official land registry lookup page</a>
+								left a lot to be desired. I realized this was the perfect chance to practice my new responsive design skills. After completing the frontend, I actually went back and attached a backend to it serve up mock land registry records.
+								I'd really love to improve upon the design and implementation even more in the future (and maybe submit that to the Grenadian government)!
+							</p>
 							<ul class="tags" aria-label="Technology used">
 								<li class="tag">HTML</li>
 								<li class="tag">CSS</li>
