--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,6 @@
 ---
 import SkipLink from "../components/SkipLink.astro";
+import Footer from "../components/Footer.astro";
 const mainContent = 'main-content';
 const pageTitle = 'Nicholas Boyce-Software Engineer';
 ---
@@ -127,6 +128,6 @@ const pageTitle = 'Nicholas Boyce-Software Engineer';
 				</p>
 			</section>
 		</main>
-		<footer></footer>
+		<Footer />
 	</body>
 </html>
