--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,133 +1,109 @@
 ---
-import SkipLink from "../components/SkipLink.astro";
-import Footer from "../components/Footer.astro";
-const mainContent = 'main-content';
+import BaseLayout from "../layouts/BaseLayout.astro";
 const pageTitle = 'Nicholas Boyce-Software Engineer';
 ---
 
-<html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" type="image/svg+xml" href="/favicon_headshot.jpg" />
-		<meta name="viewport" content="width=device-width" />
-		<meta name="generator" content={Astro.generator} />
-		<title>{pageTitle}</title>
-	</head>
-	<body>
-		<header>
-			<SkipLink mainContent={mainContent} />
-			<nav>
-				<ul>
-					<li><a href="#projects">Projects</a></li>
-					<li><a href="/blog/">Blog</a></li>
-					<li><a href="#about">About</a></li>
-				</ul>
-			</nav>
-		</header>
-		<main id={mainContent}>
-			<section id="hero" aria-labelledby="hero-heading">
-				<h1 id="hero-heading">Hi! I'm Nick.</h1>
-				<p class="section-body">
-					I’m a <span class="value-word">curious</span>, <span class="value-word">driven</span>, and <span class="value-word">inquisitive</span> software engineer.
-					<br/>
-					I value <span class="value-word">empathy</span> and <span class="value-word">connection</span>, and thrive in teams with great purpose and communication.
-					<br/>
-					I love making a <span class="value-word">positive impact</span> and being surrounded by those who care - and that’s probably you!
-				</p>
-				<picture class="main-headshot">
-					<source media="(max-width:924px)" srcset=""/>
-					<source media="(min-width:925px)" srcset=""/>
-					<img src="/Nick_minified.jpg" alt="Headshot of Nick in a white and light pink striped dress shirt."/>
-				</picture>
-			</section>
-			<section id="projects" aria-labelledby="projects-heading">
-				<h1 id="projects-heading">Projects I've Done</h1>
-				<ul class="section-body">
-					<li class="project">
-						<article>
-							<h2>Let's Build It! [WIP]</h2>
-							<p class="project-description">
-								As a software engineer who has largely learned about web development on his own, I often wished that I could more easily find people to work with.
-								I wanted to nurture my growth mindset, but what on Earth was I supposed to build? I knew I wanted to build, but I needed direction. And learning about the possibilities on my own seemed like a gargantuan task.
-								Luckily for me, I was able to find the Recurse Center, full of wonderful people with equally amazing ideas. But what about those weren't so lucky?
-								<br/>
-								Enter: Let's Build It. My goal is for this project to connect developers who need a team, or even just some inspiration. The main feature I'm working on now is an accessible search feature.
-								I've already implemented authentication and defined the user schemas. 
-							</p>
-							<ul class="tags" aria-label="Technology used">
-								<li class="tag">React.js</li>
-								<li class="tag">TypeScript</li>
-								<li class="tag">Node.js</li>
-								<li class="tag">Express</li>
-								<li class="tag">PostgreSQL</li>
-								<li class="tag">Kysely</li>
-							</ul>
-						</article>
-					</li>
-					<li class="project">
-						<article>
-							<h2>LinkCards</h2>
-							<p class="project-description">
-								The thing about learning full stack development on your own is that you're often in charge of a lot of aspects that you'd otherwise not see as a software engineer.
-								This includes creating pleasing designs. Once I realized I really wanted to hone in on the actual implementation, I practiced a lot on <a href="https://www.frontendmentor.io/profile/nicholasboyce" target="_blank">Frontend Mentor</a> to simulate 
-								what it would feel like to implement design files from the UI/UX team!
-								<br />
-								This project's design was inspired by one of the exercises there, and I extended it to create a functioning full stack application with user accounts and individual user pages.
-							</p>
-							<ul class="tags" aria-label="Technology used">
-								<li class="tag">React.js</li>
-								<li class="tag">Node.js</li>
-								<li class="tag">Express</li>
-								<li class="tag">Mongoose</li>
-								<li class="tag">MongoDB</li>
-							</ul>
-						</article>
-					</li>
-					<li class="project">
-						<article>
-							<h2>Shufflify</h2>
-							<p class="project-description">
-								Shufflify was my attempt at understanding JavaScript and DOM manipulation on a deeper level. I hadn't started learning React fully yet, and I wanted to make sure I really understood what it was doing for me
-								before simply using it for the sake of having it as a tool. I really learned a lot about how SPAs manage state (and how easy frameworks like React make it!), and I learned a good bit about the OAuth process
-								and interacting with APIs as well. Shufflify was recently approved by the Spotify Developer Team themselves, so please feel free to try it out! As the homepage says,
-								just pick your playlists, shuffle them into a brand new one, and enjoy!
-							</p>
-							<ul class="tags" aria-label="Technology used">
-								<li class="tag">HTML</li>
-								<li class="tag">CSS</li>
-								<li class="tag">JavaScript</li>
-								<li class="tag">Spotify API</li>
-							</ul>
-						</article>
-					</li>
-					<li class="project">
-						<article>
-							<h2>Grenada Land Registry</h2>
-							<p class="project-description">
-								As my first "serious" attempt at making something on my own, I'm very fond of this website. After losing a close family member and deciding to face my fears and become a software engineer,
-								I wanted to try and make something meaningful. What was on my mind was my parents' home country (as well as that of my late relative) Grenada. As beautiful as the island is, the design for their <a href="https://web.archive.org/web/20240302042518/https://elandregistry.gov.gd/" target="_blank">official land registry lookup page</a>
-								left a lot to be desired. I realized this was the perfect chance to practice my new responsive design skills. After completing the frontend, I actually went back and attached a backend to it serve up mock land registry records.
-								I'd really love to improve upon the design and implementation even more in the future (and maybe submit that to the Grenadian government)!
-							</p>
-							<ul class="tags" aria-label="Technology used">
-								<li class="tag">HTML</li>
-								<li class="tag">CSS</li>
-								<li class="tag">JavaScript</li>
-								<li class="tag">Java</li>
-								<li class="tag">Spring Boot</li>
-								<li class="tag">H2 SQL</li>
-							</ul>
-						</article>
-					</li>
-				</ul>
-			</section>
-			<section id="about" aria-labelledby="about-heading">
-				<h1 id="about-heading">My Story</h1>
-				<p class="section-body">
-					I graduated from Bowdoin College in 2022 with a Bachelor of Arts in Economics. I spent the first year out of college working in investment banking across insurance, healthcare, and fintech companies. After a yearlong sabbatical to attend to my physical and mental health, I've been diving into software engineering to develop my problem solving skills and nourish my creativity. I'm also a never-alum of the <a href="https://www.recurse.com" target="_blank">Recurse Center</a>!
-				</p>
-			</section>
-		</main>
-		<Footer />
-	</body>
-</html>
+<BaseLayout pageTitle={pageTitle}>
+	<section id="hero" aria-labelledby="hero-heading">
+		<h1 id="hero-heading">Hi! I'm Nick.</h1>
+		<p class="section-body">
+			I’m a <span class="value-word">curious</span>, <span class="value-word">driven</span>, and <span class="value-word">inquisitive</span> software engineer.
+			<br/>
+			I value <span class="value-word">empathy</span> and <span class="value-word">connection</span>, and thrive in teams with great purpose and communication.
+			<br/>
+			I love making a <span class="value-word">positive impact</span> and being surrounded by those who care - and that’s probably you!
+		</p>
+		<picture class="main-headshot">
+			<source media="(max-width:924px)" srcset=""/>
+			<source media="(min-width:925px)" srcset=""/>
+			<img src="/Nick_minified.jpg" alt="Headshot of Nick in a white and light pink striped dress shirt."/>
+		</picture>
+	</section>
+	<section id="projects" aria-labelledby="projects-heading">
+		<h1 id="projects-heading">Projects I've Done</h1>
+		<ul class="section-body">
+			<li class="project">
+				<article>
+					<h2>Let's Build It! [WIP]</h2>
+					<p class="project-description">
+						As a software engineer who has largely learned about web development on his own, I often wished that I could more easily find people to work with.
+						I wanted to nurture my growth mindset, but what on Earth was I supposed to build? I knew I wanted to build, but I needed direction. And learning about the possibilities on my own seemed like a gargantuan task.
+						Luckily for me, I was able to find the Recurse Center, full of wonderful people with equally amazing ideas. But what about those weren't so lucky?
+						<br/>
+						Enter: Let's Build It. My goal is for this project to connect developers who need a team, or even just some inspiration. The main feature I'm working on now is an accessible search feature.
+						I've already implemented authentication and defined the user schemas. 
+					</p>
+					<ul class="tags" aria-label="Technology used">
+						<li class="tag">React.js</li>
+						<li class="tag">TypeScript</li>
+						<li class="tag">Node.js</li>
+						<li class="tag">Express</li>
+						<li class="tag">PostgreSQL</li>
+						<li class="tag">Kysely</li>
+					</ul>
+				</article>
+			</li>
+			<li class="project">
+				<article>
+					<h2>LinkCards</h2>
+					<p class="project-description">
+						The thing about learning full stack development on your own is that you're often in charge of a lot of aspects that you'd otherwise not see as a software engineer.
+						This includes creating pleasing designs. Once I realized I really wanted to hone in on the actual implementation, I practiced a lot on <a href="https://www.frontendmentor.io/profile/nicholasboyce" target="_blank">Frontend Mentor</a> to simulate 
+						what it would feel like to implement design files from the UI/UX team!
+						<br />
+						This project's design was inspired by one of the exercises there, and I extended it to create a functioning full stack application with user accounts and individual user pages.
+					</p>
+					<ul class="tags" aria-label="Technology used">
+						<li class="tag">React.js</li>
+						<li class="tag">Node.js</li>
+						<li class="tag">Express</li>
+						<li class="tag">Mongoose</li>
+						<li class="tag">MongoDB</li>
+					</ul>
+				</article>
+			</li>
+			<li class="project">
+				<article>
+					<h2>Shufflify</h2>
+					<p class="project-description">
+						Shufflify was my attempt at understanding JavaScript and DOM manipulation on a deeper level. I hadn't started learning React fully yet, and I wanted to make sure I really understood what it was doing for me
+						before simply using it for the sake of having it as a tool. I really learned a lot about how SPAs manage state (and how easy frameworks like React make it!), and I learned a good bit about the OAuth process
+						and interacting with APIs as well. Shufflify was recently approved by the Spotify Developer Team themselves, so please feel free to try it out! As the homepage says,
+						just pick your playlists, shuffle them into a brand new one, and enjoy!
+					</p>
+					<ul class="tags" aria-label="Technology used">
+						<li class="tag">HTML</li>
+						<li class="tag">CSS</li>
+						<li class="tag">JavaScript</li>
+						<li class="tag">Spotify API</li>
+					</ul>
+				</article>
+			</li>
+			<li class="project">
+				<article>
+					<h2>Grenada Land Registry</h2>
+					<p class="project-description">
+						As my first "serious" attempt at making something on my own, I'm very fond of this website. After losing a close family member and deciding to face my fears and become a software engineer,
+						I wanted to try and make something meaningful. What was on my mind was my parents' home country (as well as that of my late relative) Grenada. As beautiful as the island is, the design for their <a href="https://web.archive.org/web/20240302042518/https://elandregistry.gov.gd/" target="_blank">official land registry lookup page</a>
+						left a lot to be desired. I realized this was the perfect chance to practice my new responsive design skills. After completing the frontend, I actually went back and attached a backend to it serve up mock land registry records.
+						I'd really love to improve upon the design and implementation even more in the future (and maybe submit that to the Grenadian government)!
+					</p>
+					<ul class="tags" aria-label="Technology used">
+						<li class="tag">HTML</li>
+						<li class="tag">CSS</li>
+						<li class="tag">JavaScript</li>
+						<li class="tag">Java</li>
+						<li class="tag">Spring Boot</li>
+						<li class="tag">H2 SQL</li>
+					</ul>
+				</article>
+			</li>
+		</ul>
+	</section>
+	<section id="about" aria-labelledby="about-heading">
+		<h1 id="about-heading">My Story</h1>
+		<p class="section-body">
+			I graduated from Bowdoin College in 2022 with a Bachelor of Arts in Economics. I spent the first year out of college working in investment banking across insurance, healthcare, and fintech companies. After a yearlong sabbatical to attend to my physical and mental health, I've been diving into software engineering to develop my problem solving skills and nourish my creativity. I'm also a never-alum of the <a href="https://www.recurse.com" target="_blank">Recurse Center</a>!
+		</p>
+	</section>
+</BaseLayout>
