--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,4 +1,5 @@
 ---
+import '../styles/global.css';
 import SkipLink from "../components/SkipLink.astro";
 import Footer from "../components/Footer.astro";
 const { pageTitle } = Astro.props;
@@ -16,7 +17,7 @@ const mainContent = 'main-content';
 		<header>
 			<SkipLink mainContent={mainContent} />
 			<nav>
-				<ul>
+				<ul class="nav-links">
 					<li><a href="#projects">Projects</a></li>
 					<li><a href="/blog/">Blog</a></li>
 					<li><a href="#about">About</a></li>
