Replaced picture element with image element.

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,11 +13,12 @@ const pageTitle = 'Nicholas Boyce-Software Engineer';
 			<br/>
 			I love making a <span class="value-word">positive impact</span> and being surrounded by those who care - and that’s probably you!
 		</p>
-		<picture class="main-headshot">
-			<source media="(max-width:924px)" srcset=""/>
-			<source media="(min-width:925px)" srcset=""/>
-			<img src="/Nick_minified.jpg" alt="Headshot of Nick in a white and light pink striped dress shirt."/>
-		</picture>
+		<img 
+			class="main-headshot" 
+			src="/Nick_minified.jpg" 
+			alt="Headshot of Nick in a white and light pink striped dress shirt."
+			width="1850"
+			height="2312"/>
 	</section>
 	<section id="projects" aria-labelledby="projects-heading">
 		<h1 id="projects-heading">Projects I've Done</h1>
