Replaced text in hero text.

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,7 +9,7 @@ const pageTitle = 'Nicholas Boyce-Software Engineer';
 		<p class="section-body">
 			I’m a <span class="value-word">curious</span>, <span class="value-word">driven</span>, and <span class="value-word">inquisitive</span> software engineer.
 			<br/>
-			I value <span class="value-word">empathy</span> and <span class="value-word">connection</span>, and thrive in teams with great purpose and communication.
+			I value <span class="value-word">empathy</span> and <span class="value-word">connection</span>, and thrive in teams with great communication and a <span class="value-word">growth mindset</span>.
 			<br/>
 			I love making a <span class="value-word">positive impact</span> and being surrounded by those who care - and that’s probably you!
 		</p>
