Updated text for socials.

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -4,7 +4,7 @@ const socials = [{
     platform: 'Github',
     username: 'nicholasboyce'
 }, {
-    platform: 'FrontEnd Mentor',
+    platform: 'Frontend Mentor',
     username: 'nicholasboyce'
 }, {
     platform: 'LinkedIn',
