Added grid layout for body.

--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -13,7 +13,7 @@ const mainContent = 'main-content';
 		<meta name="generator" content={Astro.generator} />
 		<title>{pageTitle}</title>
 	</head>
-	<body>
+	<body class="content-grid">
 		<header>
 			<SkipLink mainContent={mainContent} />
 			<nav>
