--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,23 +4,80 @@ import { Image } from "astro:assets";
 import headshot from '../assets/Nick_minified.jpg';
 const pageTitle = 'Nicholas Boyce-Software Engineer';
 ---
+<style>
+	.hero {
+		display: grid;
+		grid-template-areas: 
+		"heading"
+		"picture"
+		"intro";
+		padding-block: var(--gap-300);
+		row-gap: var(--gap-500);
+	}
 
+	.hero-heading {
+		font-size: var(--fs-900);
+		grid-area: heading;
+		text-align: center;
+	}
+
+	.hero .section-body {
+		grid-area: intro;
+		display: flex;
+		flex-direction: column;
+		row-gap: var(--gap-300);
+	}
+
+	.main-headshot {
+		border-radius: 0.5rem;
+		grid-column: picture;
+	}
+
+	@media screen and (min-width: 700px) {
+		.hero {
+			grid-template-areas: none;
+			grid-template-columns: [picture-start] auto [picture-end text-start] auto [text-end];
+			grid-template-rows: [content-start intro-start] 1fr [intro-end body-start]1fr [body-end content-end];
+			/* row-gap: 0; */
+			column-gap: var(--gap-600);
+			/* min-height: 100svh; */
+			padding-block: 0;
+			min-height: calc(100svh - 54px);
+		}
+
+		.hero .section-body {
+			grid-column: text;
+			grid-row: body;
+			font-size: var(--fs-600);
+		}
+
+		.hero-heading {
+			grid-column: text;
+			grid-row: intro;
+			align-self: self-end;
+			text-align: justify;
+		}
+
+		.main-headshot {
+			grid-row: content;
+			align-self: center;
+		}
+	}
+</style>
 <BaseLayout pageTitle={pageTitle}>
-	<section id="hero" aria-labelledby="hero-heading">
-		<h1 id="hero-heading">Hi! I'm Nick.</h1>
-		<p class="section-body">
-			I’m a <span class="value-word">curious</span>, <span class="value-word">driven</span>, and <span class="value-word">inquisitive</span> software engineer.
-			<br/>
-			I value <span class="value-word">empathy</span> and <span class="value-word">connection</span>, and thrive in teams that prioritize a <span class="value-word">growth mindset</span>.
-			<br/>
-			I love making a <span class="value-word">positive impact</span> and being surrounded by those who care - and that’s probably you!
-		</p>
+	<section id="hero" aria-labelledby="hero-heading" class="hero">
+		<h1 id="hero-heading" class="hero-heading">Hi! I'm Nick.</h1>
+		<div class="section-body">
+			<p>I’m a <span class="value-word">curious</span>, <span class="value-word">driven</span>, and <span class="value-word">inquisitive</span> software engineer.</p>
+			<p>I value <span class="value-word">empathy</span> and <span class="value-word">connection</span>, and thrive in teams that prioritize a <span class="value-word">growth mindset</span>.</p>
+			<p>I love making a <span class="value-word">positive impact</span> and being surrounded by those who care - and that’s probably you!</p>
+		</div>
 		<Image
 			class="main-headshot"
 			src={headshot}
 			alt="Headshot of Nick in a white and light pink striped dress shirt." />
 	</section>
-	<section id="projects" aria-labelledby="projects-heading">
+	<section id="projects" aria-labelledby="projects-heading" class="projects">
 		<h1 id="projects-heading">Projects I've Done</h1>
 		<ul class="section-body">
 			<li class="project">
