Adjusted CSS variables for light/dark themes.

--- a/src/components/ThemeIcon.astro
+++ b/src/components/ThemeIcon.astro
@@ -20,7 +20,7 @@
     transition: fill .4s ease;
   }
   .sun { 
-    fill: black; 
+    fill: var(--main-text-color); 
   }
   .moon { 
     fill: transparent; 
@@ -30,7 +30,7 @@
     fill: transparent; 
   }
   :global(.dark) .moon { 
-    fill: white; 
+    fill: var(--main-text-color); 
   }
 </style>
 
