Added first blog post and post layout + styling.

--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -39,6 +39,7 @@ const mainContent = 'main-content';
 	header {
 		position: sticky;
 		top: -1px;
+		background-color: var(--main-background-color);
 	}
 	
 	.nav-links {
